--- a/public/app/partials/profile/home.html
+++ b/public/app/partials/profile/home.html
@@ -3,10 +3,10 @@
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li ng-if="loggedInUserId == currentUserId">
-                <a href="#profile/{{loggedInUserId}}" class="{{isActive[0]}}" ng-class="{ active: isActive('/profile')}">Mysite</a>
+                <a href="#profile/myprofile/{{loggedInUserId}}" class="{{isActive[0]}}" ng-class="{ active: isActive('/profile')}">Mysite</a>
             </li>
             <li ng-if="loggedInUserId != currentUserId">
-                <a href="#profile/{{loggedInUserId}}">Mysite</a>
+                <a href="#profile/myprofile/{{loggedInUserId}}">Mysite</a>
             </li>
             <li ng-if="loggedInUserId == currentUserId">
                 <a href="#community" class="{{isActive[2]}}" ng-class="{ active: isActive('/community')}">Build Community</a>
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-12"  id="topview">
                     <h3>About Me</h3>
 
                     <p style="text-align:justify;padding-bottom:10px;">{{ aboutme }}</p>
