--- a/public/app/partials/Community/community.html
+++ b/public/app/partials/Community/community.html
@@ -3,7 +3,7 @@
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li id="step1"  data-toggle="tab" data-slide-to="0">
-                <a href="#profile/{{userId}}" class="{{isActive[1]}}">Mysite</a>
+                <a href="#profile/myprofile/{{userId}}" class="{{isActive[1]}}">Mysite</a>
             </li>
             <li id="step2"  data-toggle="tab" data-slide-to="1">
                 <a href="#community" ng-class="{ active: isActive('/community')}">Build Community</a>
