--- a/public/app/partials/Trending/trending.html
+++ b/public/app/partials/Trending/trending.html
@@ -3,7 +3,7 @@
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li ng-class="" id="step1"  data-toggle="tab" data-slide-to="0">
-                <a href="#profile/{{userId}}" class="{{isActive[1]}}">Mysite</a>
+                <a href="#profile/myprofile/{{userId}}" class="{{isActive[1]}}">Mysite</a>
             </li>
             <li ng-class="{ active: isActive('/streamit')}" id="step3"  data-toggle="tab" data-slide-to="2">
                 <a href="#streamit" class="{{isActive[2]}}">Stream It</a></li>
