--- a/public/app/partials/profile/details/online.html
+++ b/public/app/partials/profile/details/online.html
@@ -3,7 +3,7 @@
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li>
-                <a href="#profile/{{userId}}" ng-class="{ active: isActive('/profile')}">Mysite</a>
+                <a href="#profile/myprofile/{{userId}}" ng-class="{ active: isActive('/profile')}">Mysite</a>
             </li>
             <li>
                 <a href="#profile/{{userId}}/personalinfo" class="{{isActive[1]}}">Manage Mysite</a>
@@ -115,7 +115,7 @@
     </div>
 
 </div>
-    <div class="col-md-12" style="margin-top: 10px;">
+    <div class="col-md-12" id="topview" style="margin-top: 10px;">
         <ul class="breadcrumb" style="background: transparent; padding-left: 0px" >
             <li><a href="#home">Home</a> <span class="divider"></span></li>
             <li><a href="#profile/myprofile/{{userId}}">Profile</a></li>
