--- a/public/app/partials/search/advancedSearch.html
+++ b/public/app/partials/search/advancedSearch.html
@@ -3,7 +3,7 @@
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li ng-class="">
-                <a href="#profile/{{userId}}" >Mysite</a>
+                <a href="#profile/myprofile/{{userId}}" >Mysite</a>
             </li>
             <li ng-class="{ active: isActive('/streamit')}"><a href="#streamit">Stream It</a></li>
             <li ng-class="{ active: isActive('/explore')}">
