--- a/public/app/partials/profile/mylisting.html
+++ b/public/app/partials/profile/mylisting.html
@@ -191,7 +191,7 @@
                                                     <a href="#classifieds/{{item.id}}/profile"  style="color: #ffffff;"><h5 style="padding: 10px">{{item.title}}</h5></a>
                                                 </div>
                                                 <div class="col-xs-6" ng-if="currentUserId == loggedInUserId">
-                                                    <a href="#classified/{{item.id}}/manage/classified_type/profile" class="pull-right" style="color: #ffffff; margin-top: 16px; margin-right: 5px">Manage Ads & Campaigns<span class="fa fa-chevron-right"></span></a>
+                                                    <a href="#classified/{{item.id}}/manage/classified_type" class="pull-right" style="color: #ffffff; margin-top: 16px; margin-right: 5px">Manage Ads & Campaigns<span class="fa fa-chevron-right"></span></a>
                                                 </div>
                                             </div>
 
